landing page spacing bug fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3203,7 +3203,7 @@ input, select, textarea {
 		/* Main */
 
 			#main > section > .container {
-				padding: 2em 0 0 0;
+				padding: 2em 0 2em 0;
 			}
 
 		/* Footer */
